@@ -7,6 +7,7 @@ Cacti CHANGELOG
 
 1.1.26
 -issue#1010: CVE-2017-15194 - Path-Based Cross-Site Scripting (XSS)
+-issue: Fixed database session handling for PHP 7.1
 -feature: Schema changes; Examined queries without key usage and added/changed some keys
 -feature: Fixed some missing i18n
 -feature: Fixed text typo's
